--- a/FormularioCarpinteria/FormMenu.resx
+++ b/FormularioCarpinteria/FormMenu.resx
@@ -118,7 +118,63 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnMin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbAQIPp9piJQAAAFVJREFU
+        WEft0rENgDAMBVHPRjaCDaBh0jCG+VaSjjY4xT3ppHS2FBsAAEtw96JOdf9UzCpj+K6yHLFAbe8UzxIL
+        5H5Bv4NNXerrYGYUs9oRAgCQy+wFzufNjNMkO+IAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnRestaurar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbAQInkm/K3wAAAHVJREFU
+        WEftkUEKgDAMBPP/P4lX8VMx4JyU0lRSRNyBHkKzy0BMiB7uvserYqM2D8EyqM1Dbjx4gZoPCMTOlJsz
+        pwRKoXZcgPEx1EhAAhKQgAQkcIPvNuzNElj4bsNimQBjHnLvC1RBbZ7IrGe0hP7Nxc8xOwBdPosCmcy9
+        dQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnMax.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbAQIYJAnn4gAAAMJJREFU
+        WEftlzsOwjAQRC1xHEKDuBAfQUHFOQjcI7khBZiZ9UTgPpuk2CdNMyt5xpKLdVoUOecd9IB6J/HsjeJq
+        MLhBH8ibF3RRbAEGbz5F+ABLNIq3Ak+zC3topdFo8EzowADRamTDrnjG6OEDPLtEGJ1sG/CBGLLcUAzp
+        ZUWBKBAFokAUiAJRIApEgWUUmH0p/V/Lj5DXWn5igKjW8i30Nnsa+DFZK74A46qBN8w4K7YGgwZqIT5K
+        D92h35dsflL6AowJ1xUV+l0NAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbADsgA0248QAAAWdJREFU
+        WEfFl0FOwzAQRbOl4qLtOeiOTXsdYMNF2j1whvB+PCPUyEk8tlGe9JFrz/wZ4yaqB2ccxxO6o290QU+2
+        1Iy80BX9INU42lKCiTOa84meLaQaPA7oXYYzXj1AO1/iAx2mwAqUax5LnBSkf8kaVU0ox3LXuCtQZ75F
+        qAnFWs4WXwrWl6OEoiYUY7ElXKIJq01ozWJK+PPSAOW+qTmyTwdzbR5MVBswbt7ABAthI9SnuEOADCPn
+        GD/zLRSI3pTVie2dzyFB7+8eTcSLOyS2NlFf3MGgton24g5G0Sb6FReYRR410XX30eJOl/OvLe7UN0Fi
+        a3En3gQJvYo75U0QqOL7vIoVgEp3Pu0KhXOs3CMsVBsxbmuCieZdMFfnwUBvuS7nqDWLKSF58WfPH6VX
+        Jez+s3zPi8lNgcc0zlJV3FGueSyRLqkMXtLnB5af2QB4qInc05Eupw4T/309l6e8b8iu58PwC9mkuiSc
+        GpX5AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnLogOut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYeFygn0nEpBwAAAkRJREFU
+        WEftlj1PFFEUhjeYxUKzkKyuFgIVBVFiafwJxJ5YG5XPkPChpQbUQgsSTCygsJDwA1yFQAEVHzUkQIAA
+        LRQQoDAalfU5d87szGxmmNmZSWx4kifZuefcd+7Ozs7czCVRKJVKTdiLM7iJZygc4hpO4WOs1ynpQGAr
+        fsOo/MIxvKkR8SCgFj/hX4zDKT7VuOpgYh4XJCUFxjGr0eHQnMN1menDMvbjPazT/gI+wDe4i36MmfAw
+        aLyC380UL1vYpm2B0JPFHpTL72ZfWy6GxkGr38MsVnVn0y9XaE8mK5+1FAxN9Xhk2h0W8aq2VAXz6lC+
+        0HOs1eFgaBpBN7KYgpYTQU4fyv0hz5A7OuyFwg66GdJSIshpxnOTaCELadCyBQMtpuTwA69pORHk3DeJ
+        XryL4KDTDDt81VIqkPfFivXgLIIPlb//K1MIgPoNlAfVH2lOgCyiIIET5tDhmZ7LF+pvrbZU+BBnAfLU
+        S4v3EjhsfS7zWs/lC3V5V8zjb2lOQPkn6DCHDkU9VyqQF3oT+v0Nr5tiQsgJ/xsKDGybksNLLSWCnPAH
+        kcBg5X1wjLe1nAhy7EfxNAY+iv1eRksY92UkeS+wK3IGjQNYyRzGeR3LN7YJfx0LNNag3wZU7o9H2hYI
+        PbKPlMtt75ht9rQlHJov2pKtoFwl2SnbW7Jb+BDfoXsT4ibalsyGCf9vU2ojk/Ajxn3hnOATjYsPIXex
+        KIkR+YmjmNeIdCCwEbtRds0baO98D3AVJ7EdczrlkohkMv8AMt970m5Lo4IAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnInicio.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAEEcAABBHCAYAAACcmAIaAAAABGdBTUEAALGPC/xhBQAA/8dJREFUeF7s
         wQEBAAAAgJD+r+4IAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -7572,44 +7628,42 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAACAOzXk+kGAUG9/SgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnVolver.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbADsgA0248QAAAWdJREFU
-        WEfFl0FOwzAQRbOl4qLtOeiOTXsdYMNF2j1whvB+PCPUyEk8tlGe9JFrz/wZ4yaqB2ccxxO6o290QU+2
-        1Iy80BX9INU42lKCiTOa84meLaQaPA7oXYYzXj1AO1/iAx2mwAqUax5LnBSkf8kaVU0ox3LXuCtQZ75F
-        qAnFWs4WXwrWl6OEoiYUY7ElXKIJq01ozWJK+PPSAOW+qTmyTwdzbR5MVBswbt7ABAthI9SnuEOADCPn
-        GD/zLRSI3pTVie2dzyFB7+8eTcSLOyS2NlFf3MGgton24g5G0Sb6FReYRR410XX30eJOl/OvLe7UN0Fi
-        a3En3gQJvYo75U0QqOL7vIoVgEp3Pu0KhXOs3CMsVBsxbmuCieZdMFfnwUBvuS7nqDWLKSF58WfPH6VX
-        Jez+s3zPi8lNgcc0zlJV3FGueSyRLqkMXtLnB5af2QB4qInc05Eupw4T/309l6e8b8iu58PwC9mkuiSc
-        GpX5AAAAAElFTkSuQmCC
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYeBxUu3WN6bQAAAaNJREFU
+        WEftlk0oRFEYhkdGypTYyGaIzMqKnZK/hZRma2FLs2aLrK3E0gILWVoqWVkpmSSLiZSNIkXMhkRdzzl9
+        4s79b+65UvPUs5hz3u+8t+69M5Oq8e+wLKsJV/ESF2Q5GSjM4hn+pk+2zULRAN7rSjt5iZiDkml81XVO
+        zF0Ah9fjiq7xxswFcHALHugKf+K/AA7twZI+PphnXMcuGa8ODhqXQ6PyiduYlaOiw/CcHFQNb7iMaTk2
+        GMKNuIlxcoo5qfCH4I4eiZ8nHJUabwiVddwM7zgpVe4Q2NVRc6jnYljqnLCpnoEtlTTII/q/qgQK+KHS
+        hjjCOqlzh8AEvqi0IWalyhtCOQz7TRiVO8xIlTeEWvFQTQRwjVFvW0Fq/CGYxjU94k0em3EKj9VCCE6k
+        IhwMzKB6n92w/RryeQQv9I4/vTISDgYG8UGP2nH8HLPWgEvod2vmJR4ehjrxXI//0C/bDtgbQre/cYo9
+        iUWDwQxu4BUuyrInZLrxBispScQ8lLVj5XNRlu1koLAN1Sv7za1sJQelHbiPRRyT5Rp/SSr1BffmV+HX
+        uTz0AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnMax.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbAQIYJAnn4gAAAMJJREFU
-        WEftlzsOwjAQRC1xHEKDuBAfQUHFOQjcI7khBZiZ9UTgPpuk2CdNMyt5xpKLdVoUOecd9IB6J/HsjeJq
-        MLhBH8ibF3RRbAEGbz5F+ABLNIq3Ak+zC3topdFo8EzowADRamTDrnjG6OEDPLtEGJ1sG/CBGLLcUAzp
-        ZUWBKBAFokAUiAJRIApEgWUUmH0p/V/Lj5DXWn5igKjW8i30Nnsa+DFZK74A46qBN8w4K7YGgwZqIT5K
-        D92h35dsflL6AowJ1xUV+l0NAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnRestaurar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbAQInkm/K3wAAAHVJREFU
-        WEftkUEKgDAMBPP/P4lX8VMx4JyU0lRSRNyBHkKzy0BMiB7uvserYqM2D8EyqM1Dbjx4gZoPCMTOlJsz
-        pwRKoXZcgPEx1EhAAhKQgAQkcIPvNuzNElj4bsNimQBjHnLvC1RBbZ7IrGe0hP7Nxc8xOwBdPosCmcy9
-        dQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnMin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gYbAQIPp9piJQAAAFVJREFU
-        WEft0rENgDAMBVHPRjaCDaBh0jCG+VaSjjY4xT3ppHS2FBsAAEtw96JOdf9UzCpj+K6yHLFAbe8UzxIL
-        5H5Bv4NNXerrYGYUs9oRAgCQy+wFzufNjNMkO+IAAAAASUVORK5CYII=
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAHYAAAB2AAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAEJER+lCBAe0wAHByYAAAAAAAAAAAAAAAAAAAAAABAhLwAtUt4AL1frACQ7TgAA
+        AAAAAAAAAAAAAAAAAAELFCe3EB46/yE7c/8KFCbcBwcNJgAAAAAAAAAAABgoPwA7Y94BQ3DkAWOs9QA6
+        bfYAGy44AAAAAAAAAAELFCe2Dxw2/ylLk/8TIkP/Ij54/woUJtwHBw0mAB8yUQFJeeMAN1zeABQgPwAb
+        L5kBbL75ADNf8gAPFiMNFSu0EB03/yZFh/8lQ4P/LFCc/yNAff8nR4v/CREj3ABEcuYBmP//AEFt4gAR
+        HjwAAAABAB0xrQFxyvwALFHkDRkx6ihIjf8YLFX/FSZL/xcrU/8VJkn/Hi5O/y4wNf8CWpb1AZj//wGX
+        /v8ANFjcAAwTKQAUIU4BR3XnACxQ6AYNEygQHTjxK0+a/xQkRv8sT5v/LVKg/ycuPP+enp7/MkRR/wF5
+        zPkBmP//AZT5/wArSdoBR3flADVZ3QAYMT8AAAAABg0TKBAdOPEmRYf/EiFB/yc5Xv80Njv/np6e/5yc
+        nP8nO0r+AYPc/AGY//8BkPL/AC1L2QANEygAAAAAAAAAAAAAAAAGDRMoEBw48ic2Vf95eXn/np6e/56e
+        nv+enp7/mpqa/xo1SfwBfdH/ACU+zwAAABgAAAAAAAAAAAAAAAAAAAAAAAAAAAYMESwICg79l5eX/56e
+        nv+enp7/np6e/42Njf8tMTn/DylL+AsTJtkABwcmAAAAAAAAAAAAAAAAAAAAAAsLCy80NDTzcHBw/p6e
+        nv+enp7/np6e/4uLi/8qLjn/EiA8/yxQnP8oSIz/ChQm2wcHDSYAAAAAAAAAAAAAAAAVFRVge3t7/56e
+        nv+enp7/hoaG/4iIiP8mKjP/EiA9/ytOmf8tUqD/LVKg/yhIjP8KFCbcBwcNJgAAAAQmJiaoNTU165KS
+        kv+enp7/aWlp/0xMTP8aHib7JkSD/yVEhP8VJ0v/EyNE/xUmS/8TI0T/ITx0/wgQHdQAAAAmXFxc/Z6e
+        nv+enp7/ZmZm/0tLS/8fHx/WAwcKSRAcOPIsUJz/GS1X/y1Rn/8oSY//KUuT/xEeOv8IDx2mAAAAKlxc
+        XP2enp7/iYmJ/19fX/8dHR3SAAAAGwAAAAAGDRMoEB048SRBfv8kRIP/KkyU/w8cNv8MFiu6AAAAAQAA
+        AAEmJia3dXV1/lZWVv8cHBzRAAAAFAAAAAAAAAAAAAAAAAYNEygQHTjxI0F+/xAeO/8MFiq7AAAAAQAA
+        AAAAAAAAAAAAARoaGq4ZGRnFAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAABg0TKA4ZMesNFSu0AAAAAQAA
+        AAAAAAAAw8MAAIGBAAAAAAAAAAAAAAAAAAAAAAAAgAEAAMADAADgAwAAwAEAAMAAAAAAAAAAAAAAAAEA
+        AAADgQAAh8MAAA==
 </value>
   </data>
 </root>
