--- a/FormularioCarpinteria/FormMenuPrincipal.resx
+++ b/FormularioCarpinteria/FormMenuPrincipal.resx
@@ -7642,4 +7642,7 @@
         uTz0AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
